unpackaged/main/default/objects/Product2/fields/Appropriate_for_MP__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_for_MP__c</fullName>
    <label>Appropriate for (MP)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PKU</fullName>
            </value>
            <value>
                <fullName>MSUD</fullName>
            </value>
            <value>
                <fullName>TYR</fullName>
            </value>
            <value>
                <fullName>HCU</fullName>
            </value>
            <value>
                <fullName>UCD</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>Gyrate Atrophy</fullName>
            </value>
            <value>
                <fullName>MMA/PA</fullName>
            </value>
            <value>
                <fullName>Medium Chain Disorders</fullName>
            </value>
            <value>
                <fullName>Long Chain Disorders</fullName>
            </value>
            <value>
                <fullName>Glycogen Storage Disease</fullName>
            </value>
            <value>
                <fullName>Kidney Disease</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>GLUT-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>