unpackaged/main/default/objects/Product2/fields/Compatibility_String__c.field-meta.xml
<CustomField>
    <fullName>Compatibility_String__c</fullName>
    <formula>Compatible_With__c</formula>
    <label>Compatibility String</label>
    <type>Text</type>
</CustomField>