unpackaged/main/default/objects/Product2/fields/Compatible_With__c.field-meta.xml
<CustomField>
    <fullName>Compatible_With__c</fullName>
    <description>A text string for the multiselect pickval of diagnoses this product is appropriate for the treatment of. DO NOT DELETE. This is used in place of being able to use a link to Price Book Entries to Related Products.</description>
    <label>Compatible With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>